# eagine-sslplus

./: CMakeLists.txt  README.rst
config/: EAGineEmbed.cmake  EAGinePackageSSLplus.cmake  EAGineSSLResources.cmake  FindEAGineOpenSSL.cmake
deploy/: CMakeLists.txt
deploy/debian/: CMakeLists.txt  build-pkg-cfg.in  build-pkg.sh.in
deploy/dpkg/: CMakeLists.txt
deploy/dpkg/dev/: CMakeLists.txt  build-pkg.py.in  module-eagine.sslplus-link_openssl.cmake
doc/doxygen/include/: sslplus.hpp
doc/howto/: openssl.rst
docker/deb_test/dev/: CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint
docker/deb_test/dev/example/: CMakeLists.txt  list_engines.cpp
example/: CMakeLists.txt
example/eagine/: CMakeLists.txt
example/eagine/ssl/: 001_list_engines.cpp  001_log_ca_cert.cpp  002_hash_self.cpp  003_verify_cert.cpp  004_verify_cert.cpp  005_random_engine.cpp  008_sign_self.cpp
example/eagine/sslplus/: 001_list_engines.cpp  001_log_ca_cert.cpp  002_hash_self.cpp  002_provider.cpp  003_verify_cert.cpp  004_verify_cert.cpp  005_random_engine.cpp  008_sign_self.cpp  CMakeLists.txt  deb-changelog  example-ca.crt  example-ca.key  example.crt  example.csr  example.key
include/: CMakeLists.txt  Sources.cmake
include/eagine/: ssl_api.hpp  ssl_resources.gen.in  ssl_resources.hpp  ssl_resources.inl  ssl_resources.inl.in
include/eagine/ssl/: api.hpp  api.inl  openssl.hpp  resources.gen.in  resources.hpp  resources.inl
include/eagine/ssl/api/: api.hpp  api.inl  c_api.hpp  c_api.inl  config.hpp  object_stack.hpp
include/eagine/ssl_api/: result.hpp
include/eagine/sslplus/: api.hpp  api.inl  api_fwd.hpp  openssl.hpp  resources.gen.in  resources.hpp  resources.inl
include/eagine/sslplus/api/: api.hpp  api.inl  api_traits.hpp  c_api.hpp  c_api.inl  config.hpp  constants.hpp  object_handle.hpp  object_stack.hpp  result.hpp
include/eagine/sslplus/config/: basic.hpp
source/: CMakeLists.txt
source/lib/: CMakeLists.txt  ssl_resources.cpp  ssl_resources.cpp.in
source/lib/eagine-ssl/: CMakeLists.txt  prologue.inl  resources.cpp
source/lib/eagine-sslplus/: CMakeLists.txt  epilogue.inl  implement.inl  prologue.inl  resources.cpp
source/modules/eagine/: CMakeLists.txt  api.cpp  api_traits.cpp  api_traits_impl.cpp  c_api.cpp  config.cpp  constants.cpp  deb-changelog  embedded.cpp.in  object_handle.cpp  object_stack.cpp  object_stack_impl.cpp  resources.cpp  result.cpp  sslplus.cpp
submodules/: CMakeLists.txt
